<resources>
    <string name="app_name">Inventory App</string>

    <string name="button_sale">sale</string>
    <string name="item_name">Name: </string>
    <string name="item_price">Price: </string>
    <string name="item_quantity">Quantity: </string>

    <string name="editor_activity_title_new_item">Add new</string>
    <string name="editor_activity_title_edit_item">Edit item</string>

    <!--mock data-->
    <string name="mock_item_name">HP Laptop</string>
    <string name="mock_item_quantity">25 units</string>
    <string name="mock_item_price">999 $</string>
    <string name="empty_view_title">Oops, it looks like there is no items :/</string>
    <string name="empty_view_subtitle">You can upload new item anytime you want..</string>
    <!--mock data-->

    <string name="new_item_image_hint">click to choose picture</string>
    <string name="item_image">item image</string>
    <string name="item_contact">contact email</string>
    <string name="price_label">Price:</string>
    <string name="plus_button_text">+</string>
    <string name="minus_button_text">-</string>
    <string name="quantity_label">Quantity:</string>
    <string name="contact_button_text">contact item supplier</string>

    <string name="action_delete_item">Delete Item</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="email_text_body">Hello, we would like to order some stuff of item</string>
    <string name="email_text_subject">order some more stuff</string>
    <string name="email_choose_text">Send mail...</string>
    <string name="save_button_text">Save</string>
    <string name="editor_error_save_message">Error with saving item</string>
    <string name="editor_success_save_message">Item saved</string>
    <string name="editor_error_update_message">Update item failed</string>
    <string name="editor_success_update_message">Item updated</string>

    <!-- Delete dialog message strings -->
    <string name="dialog_delete_message">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
