<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/single_margin"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/half_margin"
            android:gravity="center"
            android:text="@string/new_item_image_hint"
            />

        <ImageView
            android:id="@+id/editor_picture"
            android:layout_width="@dimen/imageview_size"
            android:layout_height="@dimen/imageview_size"
            android:layout_gravity="center"
            android:contentDescription="@string/item_image"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/half_margin"
            android:focusable="false"
            android:text="@string/item_name"
            />

        <EditText
            android:id="@+id/editor_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="text"
            android:textSize="@dimen/subtitle_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/half_margin"
            android:focusable="false"
            android:text="@string/item_contact"
            />

        <EditText
            android:id="@+id/editor_item_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/subtitle_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="false"
                android:text="@string/price_label"
                />

            <EditText
                android:id="@+id/editor_item_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:textSize="@dimen/subtitle_text"/>

            <Button
                android:id="@+id/editor_increase_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/plus_button_text"/>

            <Button
                android:id="@+id/editor_decrease_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/minus_button_text"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="false"
                android:text="@string/quantity_label"
                />

            <EditText
                android:id="@+id/editor_item_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:textSize="@dimen/subtitle_text"/>

            <Button
                android:id="@+id/editor_increase_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_button_text"/>

            <Button
                android:id="@+id/editor_decrease_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_button_text"/>
        </LinearLayout>

        <Button
            android:id="@+id/editor_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/contact_button_text"
            />

        <Button
            android:id="@+id/editor_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save_button_text"
            android:layout_marginTop="@dimen/half_margin"/>

    </LinearLayout>

</ScrollView>
